test/cases/parser/ArrayDim2.errors
src/ArrayDim2.b:6:21: Syntax error (expected term)
