test/cases/parser/ArrayDim2.b
// error while parsing array dimensions

module ArrayDim

interface {
    type foo = i32[ )
